inglise cvi lisamine

--- a/css/style.css
+++ b/css/style.css
@@ -332,7 +332,8 @@ h6 {
 /* text size */
 .text-uus-small {
   font-size: 10px;
-  line-height: 14px;
+  line-height: 14px
+  
 }
 
 /* text size */
