--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,25 @@ Table of contents
     27. Home page
     28. Others
 */
+/* ===================================
+    zoom
+====================================== */
+
+.zoom {
+  padding: 50px;
+  /* background-color: green; */
+  transition: transform .2s;
+  /* Animation */
+  /* width: 200px;
+  height: 200px; */
+  margin: 0 auto;
+}
+
+.zoom:hover {
+  transform: scale(1.5);
+  /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
 
 /* ===================================
     01. Google font
