--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,35 @@ Table of contents
     28. Others
 */
 /* ===================================
+    img hover text
+====================================== */
+.ikoon {
+
+ 
+  display: none;
+  padding: 50px;
+  
+
+  position: relative;
+  top: 30%;
+  left: -20%;
+  
+  font-family: "Roboto", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    font-smoothing: antialiased;
+    font-size: 14px;
+    color: #6f6f6f;
+    font-weight: 400;
+    line-height: 24px;
+  text-align: center;
+  
+}
+
+img:hover+.ikoon {
+  display: block;
+ 
+}
+/* ===================================
     zoom
 ====================================== */
 
