--- a/css/style.css
+++ b/css/style.css
@@ -99,8 +99,11 @@ img:hover+ .ikoon {
 /* } */
 
 .zoom:hover {
-  transform: scale(1.3);
+  transform: scale(1.5);
   /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  
+  margin-top: 10rem;
+  margin-bottom: 10rem;
 }
 
 
