--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ Table of contents
 ====================================== */
 .hoverikoon
 {
-    cursor:url("/images/vaatasiia.svg"),pointer
+    cursor:url("/images/vaatasiia.svg"),zoom-in
  
     }
     /* ===================================
