--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,8 @@ Table of contents
 ====================================== */
 .hoverikoon
 {
-    cursor:url("/images/vaatasiia.svg"),zoom-in
+    /* cursor:url("/images/vaatasiia.svg"),zoom-in */
+    cursor: url("/images/click-here.png")
  
     }
     /* ===================================
