--- a/css/style.css
+++ b/css/style.css
@@ -46,8 +46,8 @@ Table of contents
 ====================================== */
 .hoverikoon
 {
-    /* cursor:url("/images/vaatasiia.svg"),zoom-in */
-    cursor:url("/images/hand.svg"),zoom-in 
+    cursor:url("/images/vaatasiia.svg"),zoom-in
+    /* cursor:url("/images/hand.svg"),zoom-in  */
     
  
     }
