--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ Table of contents
 ====================================== */
 .hoverikoon
 {
-    cursor:url("/images/vaatasiia.svg"),zoom-in
+    cursor:url("/images/click-here.svg"),wait
     /* cursor:url("/images/hand.svg"),zoom-in  */
     
  
