--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ Table of contents
 ====================================== */
 .hoverikoon
 {
-    cursor:url("/images/click-here.svg"),wait
+    cursor:url("https://raw.githubusercontent.com/oliverjuss/portfooliooliver/bdc0e0741ef04fbc9c2153b40a2179d496971e7c/images/click-here.svg"),wait
     /* cursor:url("/images/hand.svg"),zoom-in  */
     
  
