pipewelli mockupi muutmine

--- a/css/style.css
+++ b/css/style.css
@@ -55,9 +55,9 @@ Table of contents
       cursor hover zoom in icon
   ====================================== */
   
-    /* .zoomin{
+    .zoomin{
       cursor: zoom-in;
-    } */
+    }
 
 
 
