cvi lightbox ja punaseks tegemine

--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,13 @@ Table of contents
     27. Home page
     28. Others
 */
-
-
+/* ===================================
+   color red
+====================================== */
+.red
+{
+  color: #F0494B;
+}
 
 /* ===================================
     cursor hover pdf
