--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,13 @@ Table of contents
     28. Others
 */
 /* ===================================
+   responsev
+====================================== */
+.responsive {
+  width: 100%;
+  height: auto;
+}
+/* ===================================
    color red
 ====================================== */
 .red
